# watchdemo-web

./: .gitignore  docker-compose.yml
crowdsec/: acquis.yaml
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  Register.tsx  ResendVerification.tsx  ResetPassword.tsx  Sessions.tsx  VerifyEmail.tsx
frontend/src/pages/admin/: AuditLog.tsx  StatsPanel.tsx  UserDetail.tsx  UsersList.tsx  shared.tsx
frontend/src/styles/: global.css
mail/: Dockerfile  config.py  consumer.py  email_service.py  logger.py  main.py  pyproject.toml  schemas.py
web/: Dockerfile  alembic.ini  main.py  pyproject.toml
web/API/: __init__.py
web/API/views/: __init__.py
web/API/views/admin/: schemas.py  views.py
web/API/views/auth/: schemas.py  utils.py  views.py
web/API/views/user/: schemas.py  views.py
web/APP/: config.py  constants.py  dependencies.py  exception_handlers.py  exceptions.py  logger.py  middlewares.py  rate_limiter.py
web/APP/entities/: admin.py  audit_log.py  base.py  session.py  subscription.py  token.py  user.py
web/APP/ports/: lockout_port.py
web/APP/services/: admin_service.py  auth_service.py  subscription_service.py  user_service.py
web/SPI/db_adapter/: base_model.py  base_repo.py  db.py
web/SPI/db_adapter/models/: __init__.py  audit_log.py  session.py  subscription.py  token.py  user.py
web/SPI/db_adapter/repositories/: __init__.py  audit_log_repo.py  session_repo.py  subscription_repo.py  token_repo.py  user_repo.py
web/SPI/mq_adapter/: __init__.py  publisher.py  schemas.py
web/SPI/redis_adapter/: lockout_repo.py
web/migrations/: env.py
