[project]
name = "watchdemo-web"
version = "0.1.0"
description = ""
authors = [
    {name = "Schus Maxim",email = "mazik.schus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "resend (>=2.29.0,<3.0.0)",
    "PyJWT (>=2.10.0,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "aio-pika (>=9.5.0,<10.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "redis[asyncio] (>=5.0.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
